# 4543_SpatialData

./: README.md
Assignments/02-Missile_Geometry_101/: README.md  pyproject.toml  requirements-full.txt  requirements.txt  setup.ipynb  setup.sh  wdo_field_manual.md
Assignments/02-Missile_Geometry_101/_micro_lessons/: 00-Working_Directory.ipynb  01-Data_Elsewhere.ipynb  02-Viewing_Geojson.ipynb  04-Distance.ipynb  05-Geo_and_Json_overview.ipynb  06-Distances.ipynb  07-InteractiveMaps.ipynb  08-InstallingLocalLib.ipynb  09-YourOwnLibrary.ipynb  README.md
Assignments/02-Missile_Geometry_101/data/: README.md  add_prop_countries.py  clicked_points.json  data_by_country.json  lineStrings.geojson  regions.geojson
Assignments/02-Missile_Geometry_101/data/WorldCitiesGeo/: Africa-Abidjan.geojson  Africa-Accra.geojson  Africa-Addis_Ababa.geojson  Africa-Algiers.geojson  Africa-Asmara.geojson  Africa-Bamako.geojson  Africa-Bangui.geojson  Africa-Banjul.geojson  Africa-Bissau.geojson  Africa-Blantyre.geojson  Africa-Brazzaville.geojson  Africa-Bujumbura.geojson  Africa-Cairo.geojson  Africa-Casablanca.geojson  Africa-Ceuta.geojson  Africa-Conakry.geojson  Africa-Dakar.geojson  Africa-Dar_es_Salaam.geojson  Africa-Djibouti.geojson  Africa-Douala.geojson  Africa-El_Aaiun.geojson  Africa-Freetown.geojson  Africa-Gaborone.geojson  Africa-Harare.geojson  Africa-Johannesburg.geojson  Africa-Juba.geojson  Africa-Kampala.geojson  Africa-Khartoum.geojson  Africa-Kigali.geojson  Africa-Kinshasa.geojson  Africa-Lagos.geojson  Africa-Libreville.geojson  Africa-Lome.geojson  (+360 more)
(+264 files in other folders)
